# Ozcoding-School

./: .gitignore  dsf.py
03_Python/day_10/: Ch23_task.ipynb  Ch26_task.ipynb  Ch27_task.ipynb
03_Python/day_11/: task_1.ipynb  task_4.ipynb  task_5.ipynb
03_Python/day_12/: task_1.ipynb  task_5.ipynb
Database/: chapter01_06.ipynb  chapter07_13.ipynb
Database/DB_Challenge3/: 1. 생성.sql  2. 읽기.sql  3. 갱신.sql  4. 삭제.sql
Database/DB_Challenge4/: 1. CREATE.sql  2. READ.sql  3. UPDATE.sql  4. DELETE.sql
Database/DB_Challenge8/: Mongo DB.py  MongoDB.py
Flask/: app.py
Flask/Flask_day2/: app.py
Flask/templates/: index.html
HTML/: Admin page.html  README.md
HTML/ChatWindow/: Chat window.html  style.css
HTML/MyProfile/: HTML_Challenge1.html  style.css
HTML/SportStar form/: SportStar form.css  SportStar form.html  script.js
HTML/Survey form/: Survey form.html
HTML/profile/: maruProfile.css  maruProfile.html
Linux/day_01/: linux_day1.ipynb
Python/day_08/: Chaper1416_task.ipynb
Python/day_10/: Ch21_task.ipynb  Ch22_task.ipynb  Ch29_task.ipynb  Ch31_task.ipynb  Ch32_task.ipynb
Python/day_11/: task_1.ipynb  task_2.ipynb  task_3.ipynb  task_4.ipynb  task_5.ipynb  task_6.ipynb  task_7.ipynb  task_8.ipynb  task_9.ipynb
Python/day_12/: task_1.ipynb  task_2.ipynb  task_3.ipynb  task_4.ipynb  task_5.ipynb  (+1 more)
day10/: Ch24_task.ipynb  Ch25_task.ipynb  Ch28_task.ipynb  Ch30_task.ipynb
day9/: Chapter1720_task.ipynb
oz Django/oz-backend-django/: db.sqlite3  pyproject.toml
oz Django/oz-backend-django/config/: settings.py
python강의자료/: Chapter07_강의자료.ipynb
(+18 files in other folders)
